syntax = "proto3";

// Configuration for the mygrpcadapter
package adapter.mysampleadapter.config;

import "gogoproto/gogo.proto";

option go_package="config";

// Configuration for the mygrpcadapter
message Params {
    // Path of the file to save the information about runtime requests.
    string file_path = 1;
}
